--- a/exercise.html
+++ b/exercise.html
@@ -1,3 +1,10 @@
+<html>
+  <body>
+    <div id="container" style="display: flex; align-items: center;"></div>
+  </body>
+</html>
+
+<script>
 async function toDo(){
     const response = await fetch("https://jsonplaceholder.typicode.com/todos")
     const data =  await response.json()
@@ -14,3 +21,4 @@ async function toDo(){
 }
 
 toDo()
+</script> 
